--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header>
+      <div class="container-fluid navigation">
+        <div class='row col-lg-1'>
+          <h1><a id='brand' href='/blog'>gBlog</a></h1>
+        </div>
+      </div>
+    </header>
     {{{body}}}
   </body>
 </html>
