--- a/views/add.hbs
+++ b/views/add.hbs
@@ -13,6 +13,10 @@
         <input type="text" name='title' class="form-control" id="title" placeholder="Enter Title">
       </fieldset>
       <fieldset class="form-group">
+        <label for="image">Image</label>
+        <input type="text" name='image' class="form-control" id="image" placeholder="Enter Image URL">
+      </fieldset>
+      <fieldset class="form-group">
         <label for="content">Post Content</label>
         <textarea class="form-control" name='content' id="description" rows="3"></textarea>
       </fieldset>
